--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-node_modules
-.env
-coverage
-coverage.json
-typechain
+# Compiler files
+cache/
+out/
 
-#Hardhat files
-cache
-artifacts
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
+
+# Dotenv file
+.env
